--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,142 +1,45 @@
 version: '3.8'
 
+# Simplified version for Railway free tier
+# Only includes core services: API and Dashboard
+
 services:
-  mysql:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-rootpassword}
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-orders}
-      MYSQL_USER: ${MYSQL_USER:-cdc_user}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-cdc_password}
-    ports:
-      - "${MYSQL_PORT:-3306}:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./docker/mysql-init:/docker-entrypoint-initdb.d
-    command: --default-authentication-plugin=mysql_native_password --binlog-format=ROW --server-id=1 --log-bin=mysql-bin --gtid-mode=ON --enforce-gtid-consistency=ON
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
-
-  mongodb:
-    image: mongo:5.0
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-admin}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-password}
-    ports:
-      - "${MONGODB_PORT:-27017}:27017"
-    volumes:
-      - mongodb_data:/data/db
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-
-  debezium:
-    image: debezium/connect:2.4
-    depends_on:
-      - kafka
-      - mysql
-    ports:
-      - "8083:8083"
-    environment:
-      BOOTSTRAP_SERVERS: kafka:29092
-      GROUP_ID: 1
-      CONFIG_STORAGE_TOPIC: connect_configs
-      OFFSET_STORAGE_TOPIC: connect_offsets
-      STATUS_STORAGE_TOPIC: connect_statuses
-      KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      KEY_CONVERTER_SCHEMAS_ENABLE: "false"
-      VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
-
   api:
     build:
       context: ./api
       dockerfile: Dockerfile
-    depends_on:
-      mysql:
-        condition: service_healthy
     ports:
-      - "3000:3000"
+      - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
-    volumes:
-      - ./api:/app
-      - /app/node_modules
+      - MYSQL_HOST=${MYSQL_HOST}
+      - MYSQL_PORT=${MYSQL_PORT}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/transactions"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   dashboard:
     build:
       context: ./dashboard
       dockerfile: Dockerfile
-    depends_on:
-      - mongodb
     ports:
-      - "3001:3001"
+      - "${PORT:-3001}:3001"
     environment:
       - NODE_ENV=production
-    volumes:
-      - ./dashboard:/app
-      - /app/node_modules
-
-  cdc-consumer:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+      - MONGODB_URL=${MONGODB_URL}
     depends_on:
-      - kafka
-      - mongodb
-    environment:
-      - NODE_ENV=production
-    volumes:
-      - ./api:/app
-      - /app/node_modules
-    command: ["node", "cdc-consumer.js"]
-
-  connector-setup:
-    image: curlimages/curl
-    depends_on:
-      - debezium
-    volumes:
-      - ./register-mysql-connector.json:/app/register-mysql-connector.json
-      - ./register-connector.sh:/app/register-connector.sh
-    command: ["/app/register-connector.sh"]
-    deploy:
-      restart_policy:
-        condition: on-failure
-
-  data-generator:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
-    depends_on:
-      - mysql
       - api
-    volumes:
-      - ./generate-random-data.js:/app/generate-random-data.js
-      - /app/node_modules
-    command: ["node", "generate-random-data.js"]
-    environment:
-      - NODE_ENV=production
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-volumes:
-  mysql_data:
-  mongodb_data:
+# Note: Railway provides MySQL and MongoDB databases automatically
+# No need to define them in docker-compose.yml
+# Use Railway environment variables instead
