Add cloud deployment configuration for Render and Railway
- Add railway.json for Docker Compose deployment
- Add render.yaml and render-compose.yml for Render deployment
- Create root-level Dockerfiles (Dockerfile.api, Dockerfile.dashboard)
- Update environment variables for external databases
- Update API and dashboard to use environment variables
- Add comprehensive deployment documentation

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,28 @@
-# Railway Environment Variables
-# Copy this file to .env and fill in your Railway-provided values
+# Render Environment Variables for External Databases
+# Copy this file to .env and fill in your cloud database credentials
 
-# MySQL Database (Railway provides these automatically)
-MYSQL_HOST=containers-us-west-1.railway.app
-MYSQL_PORT=XXXX
-MYSQL_DATABASE=railway
-MYSQL_USER=root
-MYSQL_PASSWORD=your_mysql_password_here
-MYSQL_ROOT_PASSWORD=your_mysql_password_here
-MYSQL_URL=mysql://root:your_password@containers-us-west-1.railway.app:XXXX/railway
+# MongoDB Atlas (Free Tier - 512MB)
+# Get from: https://cloud.mongodb.com (create free cluster)
+MONGODB_URI=mongodb+srv://username:password@cluster0.xxxxx.mongodb.net/orders_db?retryWrites=true&w=majority
 
-# MongoDB Database (Railway provides these automatically)
-MONGODB_HOST=containers-us-west-1.railway.app
-MONGODB_PORT=XXXX
-MONGODB_USER=mongo
-MONGODB_PASSWORD=your_mongodb_password_here
-MONGODB_URL=mongodb://mongo:your_password@containers-us-west-1.railway.app:XXXX
+# MySQL Database (Use one of these free options):
+# Option 1: PlanetScale (MySQL-compatible, requires card for verification)
+MYSQL_HOST=aws.connect.psdb.cloud
+MYSQL_PORT=3306
+MYSQL_DATABASE=your_database_name
+MYSQL_USER=your_username
+MYSQL_PASSWORD=your_password
+
+# Option 2: Railway MySQL (if you have Railway account)
+# MYSQL_HOST=containers-us-west-1.railway.app
+# MYSQL_PORT=XXXX
+# MYSQL_DATABASE=railway
+# MYSQL_USER=root
+# MYSQL_PASSWORD=your_railway_mysql_password
 
 # Application Settings
 NODE_ENV=production
 
-# Kafka Settings (if using)
-KAFKA_BROKER_ID=1
-KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
-KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
-KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
-
-# Debezium Settings
-BOOTSTRAP_SERVERS=kafka:29092
-GROUP_ID=1
-CONFIG_STORAGE_TOPIC=connect_configs
-OFFSET_STORAGE_TOPIC=connect_offsets
-STATUS_STORAGE_TOPIC=connect_statuses
-KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
-KEY_CONVERTER_SCHEMAS_ENABLE=false
-VALUE_CONVERTER_SCHEMAS_ENABLE=false
+# Note: Kafka and Debezium services are removed for Render deployment
+# to fit within free tier limits (512MB RAM)
+# Use direct database connections instead of CDC pipeline
